--- a/src/style.css
+++ b/src/style.css
@@ -7,3 +7,13 @@ body {
   height: 100vh;
   width: 100%;
 }
+
+.tolerance_form {
+  position: absolute;
+  top: 10%;
+  left: 0;
+  z-index: 10;
+  padding: 10px;
+  color: #fff;
+  background-color: black;
+}
